# MeshUtility

./: .gitignore  LICENSE  README.md  STARTUP_BUG_ANALYSIS.md  eslint.config.js  index.html  latest-version.json  overlay.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  widget.html
.github/workflows/: release.yml
src/: App.css  App.tsx  WidgetApp.tsx  index.css  overlay.tsx  styles-prompt.css  widget-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  clipboard.rs  db.rs  injection.rs  main.rs  transcription.rs
src/components/: AboutView.tsx  ActionsView.tsx  Dashboard.tsx  DictionaryEditor.tsx  HistoryView.tsx  PromptApp.tsx  PromptCommon.tsx  ProviderView.tsx  ResultPopup.tsx  Settings.tsx  SettingsView.tsx  UpdateWidget.tsx  Waveform.tsx  Widget.tsx
src/lib/: actions.ts  catalog.ts  client.ts  index.ts  types.ts
src/store/: appStore.ts
