[package]
name = "meshutility"
version = "1.0.9"
description = "A native dictation app"
authors = ["MeshPilot"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
whisper-vulkan = ["transcribe-rs/whisper-vulkan"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
cpal = "0.15"
enigo = "0.2"
arboard = "3.6"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
once_cell = "1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
# In-process speech engine (same crate Handy uses). Keeps the model loaded in
# memory and runs inference in-process instead of spawning a subprocess that
# reloads the model from disk on every dictation.
transcribe-rs = { version = "0.3.8", features = ["onnx", "whisper-cpp"] }
# Direct dep solely to call `whisper_rs::install_logging_hooks()`, which routes
# whisper.cpp/ggml's noisy stderr output through the `log` crate (dropped, since
# the app installs no logger). Must match the version transcribe-rs uses.
whisper-rs = "0.16"
# Parakeet (transcribe-rs format) ships as a .tar.gz bundle that we extract.
tar = "0.4"
flate2 = "1.0"

[target.'cfg(windows)'.dependencies]
# GPU acceleration on Windows, matching Handy: DirectML for the Parakeet ONNX
# graph and Vulkan for whisper.cpp.
transcribe-rs = { version = "0.3.8", features = ["onnx", "whisper-cpp", "ort-directml"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Security_Cryptography",
] }
